[WKP-2141] Create CLI skeleton for MCCP (#1895)
* Add mccp cli skeleton

* Push mccp to s3

* Build mccp binary

* Update Makefile

* Add imports and ignore mccp binary

* Build darwin binary for mccp

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -327,6 +327,23 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               aws s3 cp cmd/wk/wk s3://weaveworks-wkp/wk-master-linux-amd64
             fi
+      - deploy:
+          name: Push mccp to S3
+          command: |
+            TAG=$(./tools/image-tag)
+
+            # aws gets its credential through the AWS_ACCESS_KEY_ID and
+            # AWS_SECRET_ACCESS_KEY environment variables.
+            export AWS_ACCESS_KEY_ID=$WKP_S3_AWS_ACCESS_KEY_ID
+            export AWS_SECRET_ACCESS_KEY=$WKP_S3_AWS_SECRET_ACCESS_KEY
+
+            # Upload uniquely tagged binaries
+            aws s3 cp cmd/mccp/mccp s3://weaveworks-wkp/mccp-${TAG}-linux-amd64
+
+            # Upload a "master" binary for easy access to latest master build
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              aws s3 cp cmd/mccp/mccp s3://weaveworks-wkp/mccp-master-linux-amd64
+            fi
       - run:
           name: Install helm v2
           command: |
@@ -409,6 +426,28 @@ jobs:
             # Upload a "master" binary for easy access to latest master build
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               aws s3 cp cmd/wk/wk-darwin-amd64 s3://weaveworks-wkp/wk-master-darwin-amd64
+            fi
+      - run:
+          name: Build mccp darwin binaries
+          command: |
+            LOCAL_BINARIES_GOOS=darwin make cmd/mccp/mccp BUILD_IN_CONTAINER=false
+            mv cmd/mccp/mccp cmd/mccp/mccp-darwin-amd64
+      - deploy:
+          name: Push mccp to S3
+          command: |
+            TAG=$(./tools/image-tag)
+
+            # aws gets its credential through the AWS_ACCESS_KEY_ID and
+            # AWS_SECRET_ACCESS_KEY environment variables.
+            export AWS_ACCESS_KEY_ID=$WKP_S3_AWS_ACCESS_KEY_ID
+            export AWS_SECRET_ACCESS_KEY=$WKP_S3_AWS_SECRET_ACCESS_KEY
+
+            # Upload uniquely tagged binaries
+            aws s3 cp cmd/mccp/mccp-darwin-amd64 s3://weaveworks-wkp/mccp-${TAG}-darwin-amd64
+
+            # Upload a "master" binary for easy access to latest master build
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              aws s3 cp cmd/wk/mccp-darwin-amd64 s3://weaveworks-wkp/mccp-master-darwin-amd64
             fi
 
   unit-tests:
