--- a/cmd/capi-server/k8s-deployment/configmap.yaml
+++ b/cmd/capi-server/k8s-deployment/configmap.yaml
@@ -7,9 +7,90 @@ data:
     apiVersion: capi.weave.works/v1alpha1
     kind: CAPITemplate
     metadata:
-      name: cluster-template
+      name: cluster-template-1
     spec:
       description: this is test template 1
+      params:
+        - name: CLUSTER_NAME
+          description: This is used for the cluster naming.
+      resourcetemplates:
+      - apiVersion: cluster.x-k8s.io/v1alpha3
+        kind: Cluster
+        metadata:
+          name: "${CLUSTER_NAME}"
+        spec:
+          clusterNetwork:
+            pods:
+              cidrBlocks: ["192.168.0.0/16"]
+          infrastructureRef:
+            apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
+            kind: AWSCluster
+            name: "${CLUSTER_NAME}"
+          controlPlaneRef:
+            kind: KubeadmControlPlane
+            apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
+            name: "${CLUSTER_NAME}-control-plane"
+  template2: |
+    apiVersion: capi.weave.works/v1alpha1
+    kind: CAPITemplate
+    metadata:
+      name: cluster-template-2
+    spec:
+      description: this is test template 2
+      params:
+        - name: CLUSTER_NAME
+          description: This is used for the cluster naming.
+      resourcetemplates:
+      - apiVersion: cluster.x-k8s.io/v1alpha3
+        kind: Cluster
+        metadata:
+          name: "${CLUSTER_NAME}"
+        spec:
+          clusterNetwork:
+            pods:
+              cidrBlocks: ["192.168.0.0/16"]
+          infrastructureRef:
+            apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
+            kind: AWSCluster
+            name: "${CLUSTER_NAME}"
+          controlPlaneRef:
+            kind: KubeadmControlPlane
+            apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
+            name: "${CLUSTER_NAME}-control-plane"
+  template3: |
+    apiVersion: capi.weave.works/v1alpha1
+    kind: CAPITemplate
+    metadata:
+      name: cluster-template-3
+    spec:
+      description: this is test template 3
+      params:
+        - name: CLUSTER_NAME
+          description: This is used for the cluster naming.
+      resourcetemplates:
+      - apiVersion: cluster.x-k8s.io/v1alpha3
+        kind: Cluster
+        metadata:
+          name: "${CLUSTER_NAME}"
+        spec:
+          clusterNetwork:
+            pods:
+              cidrBlocks: ["192.168.0.0/16"]
+          infrastructureRef:
+            apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
+            kind: AWSCluster
+            name: "${CLUSTER_NAME}"
+          controlPlaneRef:
+            kind: KubeadmControlPlane
+            apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
+            name: "${CLUSTER_NAME}-control-plane"
+  template4: |
+    apiVersion: capi.weave.works/v1alpha1
+    kind: CAPITemplate
+    metadata:
+      name: cluster-template-4
+    spec:
+      description: this is test template 4
       params:
         - name: CLUSTER_NAME
           description: This is used for the cluster naming.
