--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -358,7 +358,7 @@ jobs:
             export AWS_SECRET_ACCESS_KEY=$WKP_S3_AWS_SECRET_ACCESS_KEY
             export HELM=helm2
 
-            TAG=$(git describe --always)
+            TAG=$(git describe --always --match "v*")
             IMAGE_TAG=$(./tools/image-tag)
 
             CHART_VALUES_PATH=./ui/chart/wkp-ui/values.yaml
@@ -380,7 +380,7 @@ jobs:
             export AWS_ACCESS_KEY_ID=$WKP_S3_AWS_ACCESS_KEY_ID
             export AWS_SECRET_ACCESS_KEY=$WKP_S3_AWS_SECRET_ACCESS_KEY
 
-            TAG=$(git describe --always)
+            TAG=$(git describe --always --match "weave-gitops-clusters*")
             IMAGE_TAG=$(./tools/image-tag)
             
             CHART_VALUES_PATH=./charts/mccp/values.yaml
