[WKP-2139] Adds CAPITemplate CRD (#1918)
* Copy api, hack and config dirs from generated kubebuilder project
* Adds Makefile targets for generating crd
* Adds option to preserve unknown fields in resourcetemplates
* Rename Makefile targets to crd-manifests, crd-generate
* Adds api dir in Dockerfile
* Construct response map with CAPITemplates
* Adds util method to create RESTClient to query CRs from config
* Adds body field in protobuf response to contain b64 encoded resource templates

Co-authored-by: Kevin McDermott <kevin@weave.works>

--- a/cmd/capi-server/Makefile
+++ b/cmd/capi-server/Makefile
@@ -15,3 +15,19 @@ install:
 build:
 	go build -o capi-server main.go
 
+# Produce CRDs that work back to Kubernetes 1.11 (no version conversion)
+CRD_OPTIONS ?= "crd:trivialVersions=true,preserveUnknownFields=false"
+
+crd-manifests: controller-gen ## Generate WebhookConfiguration, ClusterRole and CustomResourceDefinition objects.
+	$(CONTROLLER_GEN) $(CRD_OPTIONS) rbac:roleName=manager-role webhook paths="./..." output:crd:artifacts:config=config/crd/bases
+
+crd-generate: controller-gen ## Generate code containing DeepCopy, DeepCopyInto, and DeepCopyObject method implementations.
+	$(CONTROLLER_GEN) object:headerFile="hack/boilerplate.go.txt" paths="./..."
+
+CONTROLLER_GEN = $(shell pwd)/bin/controller-gen
+controller-gen: ## Download controller-gen locally if necessary.
+	$(call go-get-tool,$(CONTROLLER_GEN),sigs.k8s.io/controller-tools/cmd/controller-gen@v0.4.1)
+
+KUSTOMIZE = $(shell pwd)/bin/kustomize
+kustomize: ## Download kustomize locally if necessary.
+	$(call go-get-tool,$(KUSTOMIZE),sigs.k8s.io/kustomize/kustomize/v3@v3.8.7)
