Connect up new MCCP UI to mccp-helm chart and acceptance tests (#1912)
Update helm-chart and acceptance tests to use new UI.

Improvements:
- More verbose ginkgo logging that shows all the steps
- Reduce `kubectl events` logging when connecting up clusters
- Build `ui-cra` as part of CI and clean up all eslint warnings (they fail the build in CI contexts)
- Allow configuration of gitops-broker port so can run alongside other servers locally
- Allow configuring the ui-server so it can serve different html roots (wkp-ui vs mccp-ui-cra)
- Tighten up selenium assertions so every `.Click` is checked for success
  - Fix up some things where it was failing, e.g. trying to close the Cluster Configuration Dialog twice immediately

Fixes:
- Changes some css selectors in the tests which were broken somehow during the migration to CRA.

TODO:
- Deploy the capi-server (right now if you go to templates page it will fail w/ an error).

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -47,6 +47,8 @@ nginx-ingress-controller:
     ssl-redirect: 'false'
 
 wkp-ui:
+  server:
+    htmlRootPath: html/mccp
   image:
     tag: v2.5.0
     pullSecrets: []
