--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -823,7 +823,7 @@ jobs:
             kubectl port-forward -n mccp svc/my-mccp-nginx-ingress-controller 8090:80 &
             cd ../../acceptance/test/
             export ACCEPTANCE_TESTS_DATABASE_TYPE=sqlite
-            go test -v --timeout=99999s
+            go test -ginkgo.v -v --timeout=99999s
             
             if [ ${RUN_MCCP_SUITE_WITH_POSTGRES} == "true" ]; then
               # Deploy postgres
@@ -1300,7 +1300,7 @@ jobs:
 
             make ui-build-for-tests
             cd test/integration/test
-            go test -v -run TestMccpUI --timeout=99999s
+            go test -ginkgo.v -v -run TestMccpUI --timeout=99999s
       - store_artifacts:
           path: /tmp/workspace/test
       - store_test_results:
