--- a/ui/chart/wkp-ui/templates/deployment.yaml
+++ b/ui/chart/wkp-ui/templates/deployment.yaml
@@ -49,14 +49,15 @@ spec:
         args:
         - --git-url={{ .Values.config.gitRepo.url }}
         - --git-poll-interval=15s
+        - --html-root-path={{ .Values.server.htmlRootPath }}
         ports:
         - containerPort: {{ .Values.service.port }}
         volumeMounts:
         - name: ui-config-volume
-          mountPath: /html/ui-config/
+          mountPath: /html/wkp-ui/ui-config/
         {{- if $configMapName }}
         - name: cluster-components-config-volume
-          mountPath: /html/cluster-components-config/
+          mountPath: /html/wkp-ui/cluster-components-config/
         {{- end }}
 
 {{- end }}
