--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -20,6 +20,8 @@ ingress:
 service:
   name: wkp-ui-server
   port: 80
+server:
+  htmlRootPath: html/wkp-ui
 config: # remember to consult `ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
   demoMode: false
   featureGates:
