Publish and use capi server (#1924)
* Try and build the capi-server in ci

* Deploy the clusters-service

* Set version on clusters-service properly

* fixes selector

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -9,6 +9,7 @@ fullnameOverride: ''
 images:
   eventWriter: docker.io/weaveworks/wkp-event-writer:v2.5.0
   gitopsRepoBroker: docker.io/weaveworks/wkp-gitops-repo-broker:v2.5.0
+  clustersService: docker.io/weaveworks/weave-gitops-clusters-service:v0.0.2
 
 dbConfig:
   databaseType: sqlite
