[WKP2168] AppBar / Template Card / Dynamically generated forms (#1919)
* [WKP-2163] Hide navbar on small screens

* Make use of the reusable Pagination Components in Alerts

* Make use of the reusable Pagination Components in Alerts - WIP2

* [WKP-2163] Implement Responsive Drawer to manage nav and content easily on smaller screens - WIP

* [WKP-2163] Implement Responsive Drawer to manage nav and content easily on smaller screens - WIP2

* [WKP-2163] Implement Responsive Drawer to manage nav and content easily on smaller screens - WIP3

* [WKP-2144] Templates section, context and skeleton for add clusters / choose template flow

* Add key to templates map

* remove full width layout from sidenav

* [WKP-2163] Nav styles

* Refactor title and breadcrumb

* Fix alerts pagination

* Partial style for burger menu

* Switch from add cluster to create cluster

* Setup proxi middleware for frontend, update capi server to be able to run locally & fix templates count

* Fix import in setupProxy

* Switch create cluster to be under Templates rather than Clusters

* Update template types

* Add providers compose

* [WKP-2168] AppBar - new design WIP

* [WKP-2168] Page and Content Wrapper updates

* [WKP-2168] Top bad colour updates

* [WKP-2168] Introduce random color generator for template image - WIP

* [WKP-2168] Introduce random color generator for template image - WIP2

* Fix refresh in templates

* Prevent zoom on resize

* Add new weavegitops logo

* Update menu icon, make topnav sticky, add orange as option for template colour

* [WKP-2146] Explore using rjsf/material-ui and some fixes

* Attempt to use value/setValue in Clusters Provider to avoid rerendering of children

* useMemo to prevent create cluster form from rerendering unnecessarily

* [WKP-2146] Remove hardcoding from react schema form

* [WKP-2146] Update function types in add cluster to minimize rerenders

* [WKP-2146] useCallback & useMemo 

--- a/cmd/capi-server/k8s-deployment/configmap.yaml
+++ b/cmd/capi-server/k8s-deployment/configmap.yaml
@@ -13,6 +13,8 @@ data:
       params:
         - name: CLUSTER_NAME
           description: This is used for the cluster naming.
+        - name: REGION
+          description: Cluster region.
       resourcetemplates:
       - apiVersion: cluster.x-k8s.io/v1alpha3
         kind: Cluster
@@ -40,6 +42,10 @@ data:
       params:
         - name: CLUSTER_NAME
           description: This is used for the cluster naming.
+        - name: REGION
+          description: Cluster region.
+        - name: SOME_OTHER_PARAM
+          description: Some other param.
       resourcetemplates:
       - apiVersion: cluster.x-k8s.io/v1alpha3
         kind: Cluster
@@ -67,6 +73,8 @@ data:
       params:
         - name: CLUSTER_NAME
           description: This is used for the cluster naming.
+        - name: REGION
+          description: Cluster region.
       resourcetemplates:
       - apiVersion: cluster.x-k8s.io/v1alpha3
         kind: Cluster
@@ -94,6 +102,8 @@ data:
       params:
         - name: CLUSTER_NAME
           description: This is used for the cluster naming.
+        - name: REGION
+          description: Cluster region.
       resourcetemplates:
       - apiVersion: cluster.x-k8s.io/v1alpha3
         kind: Cluster
