--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -11,6 +11,8 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@primer/octicons-react": "9.6.0",
+    "@rjsf/core": "^2.5.1",
+    "@rjsf/material-ui": "^2.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,18 +21,24 @@
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.169",
     "@types/node": "^12.0.0",
+    "@types/randomcolor": "^0.5.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-jsonschema-form": "^1.7.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "d3-scale": "3.2.1",
     "git-url-parse": "11.1.2",
+    "http-proxy-middleware": "^2.0.0",
+    "json-schema": "^0.3.0",
     "lodash": "^4.17.21",
     "moment": "2.25.3",
     "polished": "3.6.3",
     "prettier": "^2.3.0",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jsonschema-form": "^1.8.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use": "^17.1.1",
