Running acceptance tests locally (#1925)
* Adds some local scripts
* Disable other alerts
* Try clearer selectors

--- a/test/utils/data/mccp-prometheus-values.yaml
+++ b/test/utils/data/mccp-prometheus-values.yaml
@@ -1,9 +1,7 @@
 # EKS friendly values
 # -------------------
 defaultRules:
-  rules:
-    etcd: false
-    kubeScheduler: false
+  create: false
 # Not monitoring etcd, kube-scheduler, or kube-controller-manager because it is managed by EKS
 kubeControllerManager:
   enabled: false
