[WKP-2170] Adds copy of the CAPITemplate CRD to the helm chart (#1929)
* Adds copy of the CAPITemplate CRD to the helm chart
* Create and use a service account
* Adds service account manifest
* Copy new crd to helm chart on rebuild-crd

--- a/charts/mccp/templates/clusters-service/deployment.yaml
+++ b/charts/mccp/templates/clusters-service/deployment.yaml
@@ -20,6 +20,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      serviceAccountName: {{ include "mccp.serviceAccountName" . }}
       {{- if eq .Values.dbConfig.databaseType "sqlite" }}
       {{- if .Values.dbConfig.sqliteConfig.hostPathVolume }}
       nodeSelector:
