Use default as the namespace to look for CAPI templates (#1936)

--- a/charts/mccp/templates/clusters-service/deployment.yaml
+++ b/charts/mccp/templates/clusters-service/deployment.yaml
@@ -60,6 +60,8 @@ spec:
                   name: mccp-db-credentials
                   key: password
             {{- end }}
+            - name: POD_NAMESPACE
+              value: default
           {{- if eq .Values.dbConfig.databaseType "sqlite" }}
           volumeMounts:
             - name: database-volume
