[WKP-2134] Create PR endpoint (#1933)
Create PR endpoint using go-git-providers

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,8 @@ defaults: &defaults
 integrationTestCommonEnv: &integrationTestCommonEnv
   GOURL: https://dl.google.com/go/go1.15.8.linux-amd64.tar.gz
   GOCHECKSUM: d3379c32a90fdf9382166f8f48034c459a8cc433730bc9476d39d9082c94583b
+  GO116URL: https://golang.org/dl/go1.16.5.linux-amd64.tar.gz
+  GO116CHECKSUM: b12c23023b68de22f74c0524f10b753e7b08b1504cb7e417eccebdd3fae49061
   GOROOT: /home/circleci/goroot
   GOPATH: /home/circleci/go
   SRCDIR: /home/circleci/src/github.com/weaveworks/wks
@@ -63,6 +65,9 @@ workflows:
       - unit-tests-with-coverage
       - mccp-ui-backend-integration-tests
       - fast-integration-tests:
+          requires:
+            - build
+      - fast-integration-tests-go-116:
           requires:
             - build
       - mccp-acceptance-tests:
@@ -298,6 +303,19 @@ commands:
             cd test/integration/test
             ../bin/internal/run-integration-tests.sh destroy
 
+  install-go-116:
+    steps:
+      - run:
+          name: Install Go 1.16
+          command: |
+            go version
+            # Delete previous Go version
+            rm -rf $GOROOT
+            (cd ~ && curl --silent -L $GO116URL -o go.tar.gz && echo "$GO116CHECKSUM go.tar.gz" | sha256sum -c)
+            mkdir -p $GOROOT && tar xf ~/go.tar.gz -C $GOROOT --strip-components 1
+            echo 'export PATH=$GOROOT/bin:$PATH' >> $BASH_ENV
+            export PATH=$GOROOT/bin:$PATH
+            go version
 jobs:
   build:
     <<: *defaults
@@ -588,8 +606,32 @@ jobs:
 
             go test -v -run TestAgent
 
-            cd ../../../cmd/workspaces-controller
+            cd $CIRCLE_WORKING_DIRECTORY/cmd/workspaces-controller
             make test
+
+  fast-integration-tests-go-116:
+    docker:
+      - image: quay.io/wks/build:master-134af34f
+    environment:
+      <<: *integrationTestCommonEnv
+    working_directory: /home/circleci/src/github.com/weaveworks/wks
+    steps:
+      - setup-integration-test-env
+      - install-go-116
+      - run:
+          name: Run e2e tests
+          command: |
+            export PATH=$GOROOT/bin:$PATH
+            # wkp-ci-test-bot / circle-ci-tests token
+            export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
+            # wkp-ws-test
+            export GITHUB_ORG=$WKP_GITHUB_ORG
+            # wkp-ci-test-bot
+            export GITHUB_USER=$WKP_GITHUB_USER
+
+            go version
+            cd $CIRCLE_WORKING_DIRECTORY/cmd/capi-server
+            make tests
 
   creation-wks-components-on-eks:
     machine:
