--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -30,6 +30,11 @@ dbConfig:
   postgresConfig:
     databaseName: postgres
 
+config:
+  gitProvider:
+    type: github
+    hostname: github.com
+
 gitopsRepoBroker:
   gitRepo:
     url: ''
