--- a/charts/mccp/templates/clusters-service/deployment.yaml
+++ b/charts/mccp/templates/clusters-service/deployment.yaml
@@ -39,6 +39,15 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: GIT_PROVIDER_TYPE
+              value: {{ .Values.config.gitProvider.type }}
+            - name: GIT_PROVIDER_HOSTNAME
+              value: {{ .Values.config.gitProvider.hostname }}
+            - name: GIT_PROVIDER_TOKEN
+              valueFrom: 
+                secretKeyRef:
+                  name: git-provider-credentials
+                  key: GIT_PROVIDER_TOKEN
             - name: NATS_URL
               # NATS_AUTH_TOKEN comes from nats-env-vars-secret
               value: "nats://$(NATS_AUTH_TOKEN)@{{ printf "%s-nats-client" .Release.Name }}.$(RUNTIME_NAMESPACE):{{ (int .Values.nats.client.service.port) }}"
