Make repository and base branch configurable (#1939)
Make repository and base branch configurable

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -31,9 +31,13 @@ dbConfig:
     databaseName: postgres
 
 config:
-  gitProvider:
+  git:
     type: github
     hostname: github.com
+  capi:
+    namespace: default
+    repositoryURL: ''
+    baseBranch: main
 
 gitopsRepoBroker:
   gitRepo:
