--- a/charts/mccp/templates/clusters-service/deployment.yaml
+++ b/charts/mccp/templates/clusters-service/deployment.yaml
@@ -32,6 +32,8 @@ spec:
           image: {{ .Values.images.clustersService }}
           imagePullPolicy: IfNotPresent
           envFrom:
+          - configMapRef:
+              name: {{ include "mccp.fullname" . }}-cluster-service
           - secretRef:
               name: nats-env-vars-secret
           env:
@@ -39,10 +41,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            - name: GIT_PROVIDER_TYPE
-              value: {{ .Values.config.gitProvider.type }}
-            - name: GIT_PROVIDER_HOSTNAME
-              value: {{ .Values.config.gitProvider.hostname }}
             - name: GIT_PROVIDER_TOKEN
               valueFrom: 
                 secretKeyRef:
@@ -69,8 +67,6 @@ spec:
                   name: mccp-db-credentials
                   key: password
             {{- end }}
-            - name: POD_NAMESPACE
-              value: default
           {{- if eq .Values.dbConfig.databaseType "sqlite" }}
           volumeMounts:
             - name: database-volume
