--- a/cmd/capi-server/k8s-deployment/deployment.yaml
+++ b/cmd/capi-server/k8s-deployment/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         image: weaveworks/capi-server
         imagePullPolicy: IfNotPresent
         env:
-          - name: POD_NAMESPACE
+          - name: CAPI_TEMPLATES_NAMESPACE
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
