--- a/charts/mccp/templates/clusters-service/deployment.yaml
+++ b/charts/mccp/templates/clusters-service/deployment.yaml
@@ -46,6 +46,7 @@ spec:
                 secretKeyRef:
                   name: git-provider-credentials
                   key: GIT_PROVIDER_TOKEN
+                  optional: true
             - name: NATS_URL
               # NATS_AUTH_TOKEN comes from nats-env-vars-secret
               value: "nats://$(NATS_AUTH_TOKEN)@{{ printf "%s-nats-client" .Release.Name }}.$(RUNTIME_NAMESPACE):{{ (int .Values.nats.client.service.port) }}"
