Read "options" field from CAPITemplate CRs (#1940)
- and send it down to the clients etc

--- a/cmd/capi-server/pkg/capi/testdata/template2.yaml
+++ b/cmd/capi-server/pkg/capi/testdata/template2.yaml
@@ -7,6 +7,8 @@ spec:
   params:
     - name: AWS_SSH_KEY_NAME
       description: A description
+    - name: AWS_NODE_MACHINE_TYPE
+      options: ["big", "small"]
   resourcetemplates:
   - apiVersion: cluster.x-k8s.io/v1alpha3
     kind: Cluster
