Adding default namespace to the capd template file

--- a/test/utils/data/capi-server-v1-template-capd.yaml
+++ b/test/utils/data/capi-server-v1-template-capd.yaml
@@ -2,6 +2,7 @@ apiVersion: capi.weave.works/v1alpha1
 kind: CAPITemplate
 metadata:
   name: cluster-template-development-{{.Count}}
+  namespace: default
 spec:
   description: This is the std. CAPD template{{.Count}}
   params:
