[WKP-2176] Split form + form navigation (#1946)
* Update page layout to match designs

* Loader Component

* Update page layout to match designs - round 2

* Move nav active border to the left for the steps

* Implement addcluster endpoint call - not tested

* [WKP-2150] Add Cluster creates a PR

* cleanup

* Update style gitops section

* Add back classes to the Card

* [WKP-2176] Form fields grouping - WIP

* [WKP-2176] Form fields grouping - groups on screen

* [WKP-2176] Form fields grouping - groups on screen - updated (needs styling and validation)

* [WKP-2176] Form fields - style update

* Partial cleanup and removal of @ts-nocheck from form files

* Adding types - WIP

* [WKP-2176] Use types from rjsf/core which uses JSONSchema7

* [WKP-2176] Use types from rjsf/core which uses JSONSchema7 - Updated & Updated logos

* [WKP-2176] Create local mui theme to style form fields

* css adjustments

* css adjustments - updated

* [WKP-2176] Redo steps - WIP

* [WKP-2176] Redo steps - WIP2

* [WKP-2176] Clicking on the table of contents scrolls down to form group

* cleanup

* [WKP-2176] Table of contents - sticky & hidden on small devices

* [WKP-2176] Table of contents - sticky & hidden on small devices - updated

--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.3.1",
     "@types/d3-scale": "^3.2.2",
     "@types/git-url-parse": "9.0.0",
     "@types/jest": "^26.0.15",
