--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -968,6 +968,9 @@ jobs:
             sed -i "s|sshKeyFile:.*|sshKeyFile: /root/.ssh/weaveworks_cit_id_rsa|" config.yaml
             sed -i "s|podCIDRBlocks:.*|podCIDRBlocks: [$POD_CIDR_BLOCK]|" config.yaml
             sed -i "s|serviceCIDRBlocks:.*|serviceCIDRBlocks: [$SERVICE_CIDR_BLOCK]|" config.yaml
+            # create unique cluster config repository name
+            export CLUSTER_REPOSITORY=mccp-capi-template-$(xxd -l 8 -c 8 -p < /dev/random)
+            export GIT_REPOSITORY_URL=https://github.com/$WKP_GITHUB_ORG/$CLUSTER_REPOSITORY
       - run:
           name: Run Acceptance Tests
           no_output_timeout: 20m
